--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 appdirs==1.4.3
 certifi==2017.1.23
+emoji==0.4.5
 future==0.16.0
 lxml==3.7.3
 packaging==16.8
 pyparsing==2.2.0
 python-telegram-bot==5.3.0
+PyYAML==3.12
+requests==2.13.0
 six==1.10.0
 urllib3==1.20
